libraries do not yet support this functionality.

The changes in apm-edit were to use the method smart_add_module()
in Asim::Model to add new modules into a model. This functionality
includes the uniform reinsertion of the current child modules of a
module that is being replaced as the children of the new module
and the new capability to preserve the overrides on parameters in
the old module as the same named parameters in the new module.

----------
spartha1    Date: Tue Oct  2 14:18:27 EDT 2007  CSN: CSN-asimcore-190
                  Tue Oct  2 18:18:27 UTC 2007


Directory modules/controller/classic
 args.cpp                  Locally Modified          189 

Updating with simcore changes (rev. 2447 - Pau Cabre)

Fixed a valgrind error

Pau

----------
spartha1    Date: Tue Oct  2 14:20:31 EDT 2007  CSN: CSN-asimcore-191
                  Tue Oct  2 18:20:31 UTC 2007


Directory modules/controller/classic
 control.h                 Locally Modified          190 
 args.cpp                  Locally Modified          190 

Updating with simcore changes (rev. 2448 - Carl Beckmann)

- The classic controller's "-cfg <filename>" command line option
now accepts relative pathnames for <filename>. The path can be
relative to either the current working directory, or in the case
of recursive -cfg files, relative to the directory in which the
enclosing config file resides. In the case of a conflict, a warning
message is issued and the one relative to the enclosing config file
is used.

----------
jsemer      Date: Thu Oct  4 17:07:28 EDT 2007  CSN: CSN-asimcore-192
                  Thu Oct  4 21:07:28 UTC 2007


Directory libperl/Asim/lib/Asim
 Model.pm                  Locally Modified          191 

Directory tools/awb/apm-edit
 apm_edit.ui.h             Locally Modified          191 

Updating with simcore changes (rev. 2449 - Joel Emer)

Gracefully handle .apm files where the root module of a model
does not exist.