@@ -184,3 +184,4 @@ CSN-asimcore-189
 CSN-asimcore-190
 CSN-asimcore-191
 CSN-asimcore-192
+CSN-asimcore-193
