@@ -3743,3 +3743,13 @@ Updating with simcore changes (rev. 2449 - Joel Emer)
 
 Gracefully handle .apm files where the root module of a model
 does not exist.
+
+----------
+mcadler     Date: Wed Oct 17 14:44:00 EDT 2007  CSN: CSN-asimcore-193
+                  Wed Oct 17 18:44:00 UTC 2007
+
+
+Directory libperl/Asim/lib/Asim
+ Module.pm                 Locally Modified          192 
+
+Manage scons configuration files.
